crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_class_property_hooks_1.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Test",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Property": {
                  "name": "prop",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": null,
                  "default": null,
                  "attributes": [],
                  "hooks": [
                    {
                      "kind": "Get",
                      "body": {
                        "Block": [
                          {
                            "kind": {
                              "Return": {
                                "kind": {
                                  "Int": 42
                                },
                                "span": {
                                  "start": 59,
                                  "end": 61
                                }
                              }
                            },
                            "span": {
                              "start": 52,
                              "end": 63
                            }
                          }
                        ]
                      },
                      "is_final": false,
                      "by_ref": false,
                      "params": [],
                      "attributes": [],
                      "span": {
                        "start": 46,
                        "end": 73
                      }
                    },
                    {
                      "kind": "Set",
                      "body": {
                        "Block": [
                          {
                            "kind": {
                              "Echo": [
                                {
                                  "kind": {
                                    "Variable": "value"
                                  },
                                  "span": {
                                    "start": 84,
                                    "end": 90
                                  }
                                }
                              ]
                            },
                            "span": {
                              "start": 79,
                              "end": 92
                            }
                          }
                        ]
                      },
                      "is_final": false,
                      "by_ref": false,
                      "params": [],
                      "attributes": [],
                      "span": {
                        "start": 73,
                        "end": 98
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 23,
                "end": 104
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "prop2",
                  "visibility": "Private",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": null,
                  "default": null,
                  "attributes": [],
                  "hooks": [
                    {
                      "kind": "Get",
                      "body": {
                        "Expression": {
                          "kind": {
                            "Int": 42
                          },
                          "span": {
                            "start": 136,
                            "end": 138
                          }
                        }
                      },
                      "is_final": false,
                      "by_ref": false,
                      "params": [],
                      "attributes": [],
                      "span": {
                        "start": 129,
                        "end": 148
                      }
                    },
                    {
                      "kind": "Set",
                      "body": {
                        "Expression": {
                          "kind": {
                            "Variable": "value"
                          },
                          "span": {
                            "start": 155,
                            "end": 161
                          }
                        }
                      },
                      "is_final": false,
                      "by_ref": false,
                      "params": [],
                      "attributes": [],
                      "span": {
                        "start": 148,
                        "end": 167
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 104,
                "end": 173
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "prop3",
                  "visibility": null,
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": null,
                  "default": null,
                  "attributes": [],
                  "hooks": [
                    {
                      "kind": "Get",
                      "body": "Abstract",
                      "is_final": false,
                      "by_ref": true,
                      "params": [],
                      "attributes": [],
                      "span": {
                        "start": 199,
                        "end": 213
                      }
                    },
                    {
                      "kind": "Set",
                      "body": "Abstract",
                      "is_final": false,
                      "by_ref": false,
                      "params": [],
                      "attributes": [],
                      "span": {
                        "start": 213,
                        "end": 222
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 173,
                "end": 228
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "prop4",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": null,
                  "default": null,
                  "attributes": [],
                  "hooks": [
                    {
                      "kind": "Get",
                      "body": {
                        "Block": [
                          {
                            "kind": {
                              "Return": {
                                "kind": {
                                  "Int": 42
                                },
                                "span": {
                                  "start": 271,
                                  "end": 273
                                }
                              }
                            },
                            "span": {
                              "start": 264,
                              "end": 275
                            }
                          }
                        ]
                      },
                      "is_final": true,
                      "by_ref": false,
                      "params": [],
                      "attributes": [],
                      "span": {
                        "start": 252,
                        "end": 285
                      }
                    },
                    {
                      "kind": "Set",
                      "body": {
                        "Block": []
                      },
                      "is_final": false,
                      "by_ref": false,
                      "params": [
                        {
                          "name": "value",
                          "type_hint": {
                            "kind": {
                              "Named": {
                                "parts": [
                                  "string"
                                ],
                                "kind": "Unqualified",
                                "span": {
                                  "start": 289,
                                  "end": 295
                                }
                              }
                            },
                            "span": {
                              "start": 289,
                              "end": 295
                            }
                          },
                          "default": null,
                          "by_ref": false,
                          "variadic": false,
                          "visibility": null,
                          "set_visibility": null,
                          "attributes": [],
                          "span": {
                            "start": 289,
                            "end": 302
                          }
                        }
                      ],
                      "attributes": [],
                      "span": {
                        "start": 285,
                        "end": 312
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 228,
                "end": 314
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 315
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 315
  }
}
