crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_class_property_modifiers.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Test",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Property": {
                  "name": "prop",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": null,
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 23,
                "end": 41
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "prop",
                  "visibility": "Protected",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": null,
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 47,
                "end": 71
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "prop",
                  "visibility": null,
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": true,
                  "type_hint": null,
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 77,
                "end": 91
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "prop",
                  "visibility": "Private",
                  "set_visibility": null,
                  "is_static": true,
                  "is_readonly": false,
                  "type_hint": null,
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 97,
                "end": 117
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 120
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 120
  }
}
