crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_class_property_promotion.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Point",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "__construct",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [
                    {
                      "name": "x",
                      "type_hint": {
                        "kind": {
                          "Named": {
                            "parts": [
                              "float"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 69,
                              "end": 74
                            }
                          }
                        },
                        "span": {
                          "start": 69,
                          "end": 74
                        }
                      },
                      "default": {
                        "kind": {
                          "Float": 0.0
                        },
                        "span": {
                          "start": 80,
                          "end": 83
                        }
                      },
                      "by_ref": false,
                      "variadic": false,
                      "visibility": "Public",
                      "set_visibility": null,
                      "attributes": [],
                      "span": {
                        "start": 62,
                        "end": 83
                      }
                    },
                    {
                      "name": "y",
                      "type_hint": {
                        "kind": {
                          "Named": {
                            "parts": [
                              "array"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 103,
                              "end": 108
                            }
                          }
                        },
                        "span": {
                          "start": 103,
                          "end": 108
                        }
                      },
                      "default": {
                        "kind": {
                          "Array": []
                        },
                        "span": {
                          "start": 114,
                          "end": 116
                        }
                      },
                      "by_ref": false,
                      "variadic": false,
                      "visibility": "Protected",
                      "set_visibility": null,
                      "attributes": [],
                      "span": {
                        "start": 93,
                        "end": 116
                      }
                    },
                    {
                      "name": "z",
                      "type_hint": {
                        "kind": {
                          "Named": {
                            "parts": [
                              "string"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 134,
                              "end": 140
                            }
                          }
                        },
                        "span": {
                          "start": 134,
                          "end": 140
                        }
                      },
                      "default": {
                        "kind": {
                          "String": "hello"
                        },
                        "span": {
                          "start": 146,
                          "end": 153
                        }
                      },
                      "by_ref": false,
                      "variadic": false,
                      "visibility": "Private",
                      "set_visibility": null,
                      "attributes": [],
                      "span": {
                        "start": 126,
                        "end": 153
                      }
                    },
                    {
                      "name": "a",
                      "type_hint": {
                        "kind": {
                          "Named": {
                            "parts": [
                              "int"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 179,
                              "end": 182
                            }
                          }
                        },
                        "span": {
                          "start": 179,
                          "end": 182
                        }
                      },
                      "default": {
                        "kind": {
                          "Int": 0
                        },
                        "span": {
                          "start": 188,
                          "end": 189
                        }
                      },
                      "by_ref": false,
                      "variadic": false,
                      "visibility": "Public",
                      "set_visibility": null,
                      "attributes": [],
                      "span": {
                        "start": 163,
                        "end": 189
                      }
                    },
                    {
                      "name": "h",
                      "type_hint": null,
                      "default": null,
                      "by_ref": false,
                      "variadic": false,
                      "visibility": "Public",
                      "set_visibility": null,
                      "attributes": [],
                      "hooks": [
                        {
                          "kind": "Set",
                          "body": {
                            "Expression": {
                              "kind": {
                                "Variable": "value"
                              },
                              "span": {
                                "start": 218,
                                "end": 224
                              }
                            }
                          },
                          "is_final": false,
                          "by_ref": false,
                          "params": [],
                          "attributes": [],
                          "span": {
                            "start": 211,
                            "end": 226
                          }
                        }
                      ],
                      "span": {
                        "start": 199,
                        "end": 227
                      }
                    },
                    {
                      "name": "g",
                      "type_hint": null,
                      "default": {
                        "kind": {
                          "Int": 1
                        },
                        "span": {
                          "start": 249,
                          "end": 250
                        }
                      },
                      "by_ref": false,
                      "variadic": false,
                      "visibility": "Public",
                      "set_visibility": null,
                      "attributes": [],
                      "hooks": [
                        {
                          "kind": "Get",
                          "body": {
                            "Expression": {
                              "kind": {
                                "Int": 2
                              },
                              "span": {
                                "start": 260,
                                "end": 261
                              }
                            }
                          },
                          "is_final": false,
                          "by_ref": false,
                          "params": [],
                          "attributes": [],
                          "span": {
                            "start": 253,
                            "end": 263
                          }
                        }
                      ],
                      "span": {
                        "start": 237,
                        "end": 264
                      }
                    },
                    {
                      "name": "i",
                      "type_hint": null,
                      "default": null,
                      "by_ref": false,
                      "variadic": false,
                      "visibility": null,
                      "set_visibility": null,
                      "attributes": [],
                      "span": {
                        "start": 274,
                        "end": 282
                      }
                    }
                  ],
                  "return_type": null,
                  "body": [],
                  "attributes": []
                }
              },
              "span": {
                "start": 25,
                "end": 293
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 294
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 294
  }
}
